--- a/Areas/Manage/Views/User/Details.cshtml
+++ b/Areas/Manage/Views/User/Details.cshtml
@@ -9,106 +9,59 @@
 <div>
     <h4>User</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <div class="grid">
+
+    <dl class="grid_row">
+        <dt class = "grid_column-2 label--info label--title label">
             @Html.DisplayNameFor(model => model.HomeAddress)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "grid_column-10 label label--white label--text-black">
             @Html.DisplayFor(model => model.HomeAddress)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "grid_column-2 label--info label--title label">
             @Html.DisplayNameFor(model => model.FullName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "grid_column-10 label label--white label--text-black">
             @Html.DisplayFor(model => model.FullName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "grid_column-2 label--info label--title label">
             @Html.DisplayNameFor(model => model.UserName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "grid_column-10 label label--white label--text-black">
             @Html.DisplayFor(model => model.UserName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NormalizedUserName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NormalizedUserName)
-        </dd>
-        <dt class = "col-sm-2">
+       
+        <dt class = "grid_column-2 label--info label--title label">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "grid_column-10 label label--white label--text-black">
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NormalizedEmail)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NormalizedEmail)
-        </dd>
-        <dt class = "col-sm-2">
+   
+        <dt class = "grid_column-2 label--info label--title label">
             @Html.DisplayNameFor(model => model.EmailConfirmed)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "grid_column-10 label label--white label--text-black">
             @Html.DisplayFor(model => model.EmailConfirmed)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PasswordHash)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PasswordHash)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SecurityStamp)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SecurityStamp)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ConcurrencyStamp)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ConcurrencyStamp)
-        </dd>
-        <dt class = "col-sm-2">
+    
+        <dt class = "grid_column-2 label--info label--title label">
             @Html.DisplayNameFor(model => model.PhoneNumber)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "grid_column-10 label label--white label--text-black">
             @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
+        <dt class = "grid_column-2 label--info label--title label">
+            PhoneConfirmed
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "grid_column-10 label label--white label--text-black">
             @Html.DisplayFor(model => model.PhoneNumberConfirmed)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TwoFactorEnabled)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TwoFactorEnabled)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LockoutEnd)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LockoutEnd)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LockoutEnabled)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LockoutEnabled)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AccessFailedCount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AccessFailedCount)
-        </dd>
+      
     </dl>
+    </div>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn--primary">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
