--- a/Areas/Manage/Views/User/Edit.cshtml
+++ b/Areas/Manage/Views/User/Edit.cshtml
@@ -53,7 +53,7 @@
             </div>
       
             <div class="control">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn--primary" />
             </div>
         </form>
     </div>
