--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -186,6 +186,8 @@
   padding: 30px 0;
   display: none;
   border-radius: 3px;
+  z-index: 2;
+  width: 400px;
 }
 .carts-header {
   display: flex;
@@ -208,6 +210,7 @@
   margin-top: 20px;
   height: 56%;
   overflow-y: auto;
+  overflow-x: hidden;
   border-bottom: 1px solid #eaeaf5;
 }
 .products {
@@ -219,6 +222,7 @@
 .product-item {
   padding: 5px 0;
   display: flex;
+  margin-left: 5px;
 }
 .product_img {
   width: 60px;
@@ -229,17 +233,21 @@
 .product-body_info {
   margin: 0px 5px;
   flex: 1;
+  min-width: 256px;
+  max-width: 256px;
+
 }
 .product-body_info-title {
   line-height: 20px;
   color: var(--text-color);
   font-size: 1.4rem;
   font-weight: 600;
-  min-height: 38px;
+  min-height: 28px;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
+  text-align: left;
 }
 .product-body_info-icon {
   font-size: 1.2rem;
@@ -304,6 +312,21 @@
   align-items: center;
 }
 
+.header_cart{ 
+  position: relative;
+}
+.carts_count{ 
+  position: absolute;
+  top: -10px;
+  right: -4px;
+  background-color: red;
+  font-size: 1.2rem;
+  width: 20px;
+  text-align: center;
+  padding: 4px;
+  color: #ffff;
+  border-radius: 7px;
+}
 /* end logo */
 
 /* footer */
