--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -20,6 +20,8 @@
                         
                     }
                     <li class="header_user-menu-item"><a asp-action="Index" asp-area="Manage" asp-controller="Account">Thông tin tài khoản</a></li>
+                    <li class="header_user-menu-item"><a asp-action="History" asp-area="" asp-controller="Cart" asp-route-userId="@UserManager.GetUserId(User)">Lịch sử mua hàng</a></li>
+
                     <li class="header_user-menu-item"><a asp-action="Signout" asp-controller="Account" asp-route-returnUrl = "@Url.Action("Index", "Home", new { area = "" })">Đăng xuất</a></li>
                 </ul>
             </div>
