--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+           <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/base.css" />
     <link rel="stylesheet" href="/css/main.css" />
     <script src="~/js/addToCart.js"></script>
@@ -59,23 +60,11 @@
                                 <div class="carts-body">
                                     <ul id="productscarts" class="products">
                                       
+                                      @await Html.PartialAsync("_CartPartial")
 
                                     </ul>
-                                </div>
-                                <div class="carts_preview-total">
-                                    <span class="carts_preview-total-label">Tổng tiền: </span>
-                                    <div class="product-body_info-price">
-                                        <i class="product-body_info-icon fas fa-dollar-sign"></i>
-                                        <span id="product-body_info-total" class="product-body_info-total">0</span>
-                                    </div>
-                                </div>
-                                <div class="carts_controls">
-                                    <a href="#" class="carts_cart-preview btn btn--blue-dark">Cập nhật</a>
-                                    <a href="#" class="carts_cart-pay btn btn--blue-light">Thanh toán</a>
-                                </div>
-                            </div>
-                        </button>
-                            <div id="carts_count" class="carts_count">0</div>
+                                
+                           
 
                     </div>
                     <div class="header_notify">
