--- a/Views/Home/detail.cshtml
+++ b/Views/Home/detail.cshtml
@@ -1,30 +1,29 @@
 @{
-    ViewData["Title"] = "detail";
+  ViewData["Title"] = "detail";
+  string display = "";
 }
 @model Product;
 <style>
-    body{
+  body {
     background-color: #edf1f5;
-    margin-top:20px;
-}
-
+  }
 </style>
 <script>
-    $(document).ready(function() {
- 
-  $('.color-choose input').on('click', function() {
+  $(document).ready(function () {
+
+    $('.color-choose input').on('click', function () {
       var headphonesColor = $(this).attr('data-image');
- 
+
       $('.active').removeClass('active');
       $('.left-column img[data-image = ' + headphonesColor + ']').addClass('active');
       $(this).addClass('active');
+    });
+
   });
- 
-});
 </script>
 <main class="container">
- 
- <link rel="stylesheet" href="~/css/product.css">
+
+  <link rel="stylesheet" href="~/css/product.css">
   <!-- Left Column / Headphones Image -->
 
   <div class="left-column">
@@ -32,25 +31,25 @@
     <img data-image="blue" src="~/images/@Model.image_url" alt="">
     <img data-image="red" class="active" src="~/images/@Model.image_url" alt="">
   </div>
- 
- 
+
+
   <!-- Right Column -->
   <div class="right-column">
- 
+
     <!-- Product Description -->
     <div class="product-description">
       <span>Lego</span>
       <h2>@Model.name</h2>
       <p>@Model.description</p>
     </div>
- 
+
     <!-- Product Configuration -->
     <div class="product-configuration">
- 
+
       <!-- Product Color -->
       <div class="product-color">
         <span>Color</span>
- 
+
         <div class="color-choose">
           <div>
             <input data-image="red" type="radio" id="red" name="color" value="red" checked>
@@ -65,28 +64,41 @@
             <label for="black"><span></span></label>
           </div>
         </div>
- 
+
       </div>
- 
+
       <!-- Cable Configuration -->
       <div class="cable-config">
         <span>Cable configuration</span>
- 
+
         <div class="cable-choose">
           <button>Straight</button>
           <button>Coiled</button>
           <button>Long-coiled</button>
         </div>
- 
-        <a href="#">How to configurate your Lego</a>
+        @if (@Model.quantity == 0)
+        {
+          <div style="font-size: 1.2rem;" class="text text-dark">Số lượng: <span class="text-danger"
+            id="count-@Model.product_id">Hết hàng</span></div>
+          display = "hidden";
+        }
+        else
+        {
+          <div style="font-size: 1.2rem;" class="text text-dark">Số lượng: <span class="text-success"
+            id="count-@Model.product_id">@Model.quantity</span></div>
+          display = "visible";
+        }
+
       </div>
     </div>
- 
+
     <!-- Product Pricing -->
     <div class="product-price">
       <span>@Model.price$</span>
-      <a asp-action="Add" asp-controller="cart" asp-route-id="@Model.product_id" onclick="addCart('/images/@Model.image_url','@Model.name','@Model.price' , '@Model.product_id')" class="cart-btn">Thêm vào giỏ hàng</a>
-      
+      <a  style="visibility: @display;" asp-action="Add" asp-controller="cart" asp-route-id="@Model.product_id"
+        onclick="addCart('/images/@Model.image_url','@Model.name','@Model.price' , '@Model.product_id')"
+        id="btn-@Model.product_id" class="cart-btn">Thêm vào giỏ hàng</a>
+
     </div>
   </div>
 </main>
