--- a/wwwroot/css/product.css
+++ b/wwwroot/css/product.css
@@ -7,6 +7,7 @@
     display: flex;
     padding: 10px 2px;
     justify-content: right;
+    align-items: center;
 
 }
 
@@ -22,12 +23,14 @@
     padding: 10px;
     margin: 10px;
     font-size: 1.2rem;
+    height: 40px;
 
 }
 
 .filter_select-input { 
     border: none;
-    width: 100px;
+    width: 200px; 
+    font-size: 2rem;
     background-color: #f5f5f5;
 }
 
@@ -118,6 +121,10 @@
     animation: btnHover 0.2s linear ;
     text-decoration: none;
 
+}
+
+.box_btn a {
+  text-decoration: none;
 }
 .box_btn:hover{
     background-color: #23d2e2f8;
@@ -321,6 +328,9 @@
     align-items: center;
   }
   
+  .product-price a { 
+    text-decoration: none;
+  }
   .product-price span {
     font-size: 26px;
     font-weight: 300;
